iot-slice-quota.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: iot-slice
  labels:
    slice: iot
