video-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-backend-service
  namespace: realtime-services
spec:
  type: NodePort
  selector:
    app: video-backend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30090
