allow-smf-egress-to-amf.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-smf-egress-to-amf
  namespace: control-plane-services
spec:
  podSelector:
    matchLabels:
      component: smf
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          component: amf
    ports:
    - protocol: TCP
      port: 80
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
